# xoxo

./: .env.example  .gcloudignore  .gitignore  README.md  deploy.sh  pyproject.toml
app/: config.py
app/api/: deps.py  routes.py  webhook_routes.py
app/api/routers/: admin.py
app/db/: base.py  session.py
app/domain/: fallback.py
app/integrations/: llm_client.py  wasender_client.py
app/logging/: audit_log.py
app/repositories/: __init__.py  student.py
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/.github/: PULL_REQUEST_TEMPLATE.md
backend/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/alembic/: env.py
backend/alembic/versions/: 2025_11_19_1600-001_initial_user_table_with_auth.py  2025_11_21_1701-336052308553_add_student_messaging_prefs.py  2025_11_21_1749-f7cef4dac3fa_add_students_table.py  2025_11_25_0000-c4e8a2f9b1d3_create_messages_table.py  2025_12_01_1846-6904e90a9791_rename_student_fields_proficiency_level_.py
backend/app/: config.py  main.py  security.py
backend/app/api/: deps.py  routes.py  schemas.py  webhook_routes.py
backend/app/api/routers/: admin.py  auth.py  messages.py  schedule.py  students.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  health.py  messages.py  students.py  users.py
backend/app/core/: config.py  deps.py  exceptions.py  llm_client.py  prompts.py  security.py
backend/app/db/: __init__.py  base.py  base_class.py  session.py
backend/app/db/models/: __init__.py  admin.py  message.py  student.py
backend/app/domain/: validators.py
backend/app/integrations/: gcp_scheduler.py  llm_client.py  wasender_client.py
backend/app/logging/: audit_log.py
backend/app/models/: message.py  student.py  user.py
backend/app/repositories/: admin.py  base.py  message.py  student.py  user.py
backend/app/schemas/: auth.py  message.py  message_generation.py  student.py  user.py
backend/app/services/: auth.py  message.py  message_generation.py  student.py  user.py  word_of_day_service.py
backend/scripts/: create_admin.py  init_db.py  quickstart.sh
backend/tests/: conftest.py  test_auth.py  test_broadcast.py  test_enrollment.py  test_generate_endpoint.py  test_message_repository.py  test_service_happy_path.py  test_validators.py
backend/tests/integration/test_api/: test_health.py
backend/tests/unit/: test_security.py
backend/tests/unit/test_api/: test_messages.py  test_messages_generate.py
backend/tests/unit/test_core/: test_llm_client.py
backend/tests/unit/test_services/: test_message.py  test_message_generation.py  test_student.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  messages.ts  schedule.ts  students.ts
frontend/src/components/: AddStudentDialog.tsx  AnnouncementTab.tsx  DeleteConfirmDialog.tsx  EditStudentDialog.tsx  LoginScreen.tsx  ScheduleTab.tsx  StudentsTab.tsx
scripts/: init_db.py  manage_students.py
tests/: test_enrollment.py
